# standup

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
docs/: index.html
promo/: promo.css  promo.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  scheduler.rs  store.rs  tray.rs  win.rs
tools/: capture-promo.js  gen-icon.js
ui/settings/: index.html  settings.css  settings.js
ui/shared/: bridge.js  sounds.js  tokens.css
ui/toast/: toast.css  toast.html  toast.js
